update index and add new article

--- a/index.html
+++ b/index.html
@@ -1,10 +1,111 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Aggregation of Ayan's Thoughts</title>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Ayan's Blog – Tech, Investing, and Personal Reflections</title>
+  <meta name="description" content="Explore Ayan's personal blog featuring articles on technology, investing, and everyday reflections.">">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Basic Reset & Simple Styling */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: sans-serif;
+    }
+    body {
+      background-color: #fafafa;
+      color: #333;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header, footer {
+      background-color: #444;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin-bottom: 0.5rem;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 0.5rem;
+      text-decoration: none;
+    }
+    main {
+      flex: 1;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    article {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      margin-bottom: 1rem;
+      padding: 1rem;
+    }
+    article h2 {
+      margin-bottom: 0.3rem;
+    }
+    article h2 a {
+      color: #333;
+      text-decoration: none;
+    }
+    article h2 a:hover {
+      text-decoration: underline;
+    }
+    .date {
+      color: #999;
+      font-size: 0.9rem;
+      margin-bottom: 0.5rem;
+    }
+    .excerpt {
+      font-size: 1rem;
+      line-height: 1.4;
+    }
+    footer p {
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
 <body>
-    <h1>Aggregation of Ayan's Thoughts</h1>
-    <p>Why I invest</p>
+
+  <!-- HEADER -->
+  <header>
+    <h1>Aggregation of Ayan's Myriad Thoughts</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <!-- Add more nav links if needed -->
+    </nav>
+  </header>
+
+  <!-- MAIN CONTENT -->
+  <main>
+    <h2>Articles</h2>
+    
+    <!-- POST 1 -->
+    <article>
+      <h2><a href="why-i-invest.html">Why I Invest</a></h2>
+      <p class="date">Posted on January 1, 2025</p>
+      <p class="excerpt">
+        Why angel investing makes me a better entreprenuer...
+      </p>
+    </article>
+
+
+    <!-- Add more articles here as needed -->
+    
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Ayan Baruae</p>
+    <p>Powered by <a href="https://pages.github.com/" style="color:#fff;text-decoration:underline;">GitHub Pages</a></p>
+  </footer>
+
 </body>
 </html>
